# into_to_ds

./: .gitignore  README.md
hw1/samples/: in1_out1  in1_out2  in1_out4  in1_out5  in1_out6  in1_out7  in2_out1  in2_out2
hw1/samples/samples/: in1_out5
hw1/src/: CMakeLists.txt  Cluster.cpp  KMedoids.cpp  Kmeans.cpp  Point.cpp  SeedsGenerator.cpp  Tests.cpp  main.cpp
hw1/src/include/: Cluster.h  KMedoids.h  Kmeans.h  Point.h  SeedsGenerator.h  Tests.h
hw1/src/tests/: Tests.cpp
hw1/src/tests/include/: Tests.h
hw2/data/: heart.dat.mm  pima-indians-diabetes.mm  xor.data
hw2/data/outputs/: and.out  diabetes_KNN_E  diabetes_KNN_M  diabetes_Perceptron  heart_KNN_E  heart_KNN_M  heart_Perceptron  xor.out
hw2/src/: CMakeLists.txt  Classifier.cpp  Classifier.h  CosineDistance.cpp  DataReader.cpp  DataReader.h  Distance.cpp  EuclideanDistance.cpp  KNNClassifier.cpp  KNNClassifier.h  Makefile  ManhattanDistance.cpp  MetaClassifier.cpp  Perceptron.cpp  Perceptron.h  Point.cpp  Tests.cpp  Tests.h  main.cpp  src  test_diff.sh
hw2/src/include/: Classifier.h  CosineDistance.h  DataReader.h  Distance.h  EuclideanDistance.h  KNNClassifier.h  ManhattanDistance.h  MetaClassifier.h  Perceptron.h  Point.h  Tests.h
hw3/reviews/example/neg/: 14_3.txt
hw3/reviews/example/pos/: 10_7.txt
hw3/src/: .envrc  argparse_actions.py  bag_of_words.py  learn.py  parser.py  requirements.txt  review.py  reviewer.py  stopwords.txt  stopwords_crap.txt  tester.py  utils.py  words_parser.py
hw3/src/review/: __init__.py  review.py  reviewer.py
hw3/src/utils/: __init__.py  argparse_actions.py  utils.py
lab1/src/: generate_chapters  more_than_average  most_common_word  next_most_frequent  run
lab2/src/: CMakeLists.txt  FeatureVector.cpp  Makefile  Statistics.cpp  Statistics.h  main.cpp
lab2/src/include/: FeatureVector.h  Statistics.h
lab2/src/tests/: FeatureVectorTests.cpp  TestRunner.cpp
lab2/src/tests/include/: FeatureVectorTests.h  TestRunner.h
lab3/: colors_dataset_ready.txt
lab3/src/: CMakeLists.txt  Cluster.cpp  Cluster.h  Kmeans.cpp  Kmeans.h  Point.cpp  Point.h  main.cpp
lab3/src/include/: Kmeans.h  Point.h
lab4/: input.txt  iris.data.formatted.txt
lab4/src/: AgglomerativeClustering.cpp  CMakeLists.txt  Cluster.cpp  Point.cpp  main.cpp
lab4/src/include/: AgglomerativeClustering.h  Cluster.h  PairDistance.h  Point.h
lab5/data/: iris_kmeans_3  iris_kmeans_4  iris_kmeans_5  iris_kmeans_6  out_average_iris  out_complete_iris  out_single_iris  sample_input  sample_out
lab5/src/: BSS.cpp  CMakeLists.txt  Cluster.cpp  ClusterReader.cpp  EvaluationMeasure.cpp  Point.cpp  Purity.cpp  SilhouetteCoeff.cpp  TSS.cpp  WSS.cpp  main.cpp
lab5/src/include/: BSS.h  Cluster.h  ClusterReader.h  EvaluationMeasure.h  Point.h  Purity.h  SilhouetteCoeff.h  TSS.h  WSS.h
lab6/src/: CMakeLists.txt  DataReader.cpp  Evaluation.cpp  EvaluationMeasures.cpp  KNN.cpp  Point.cpp  main.cpp
lab6/src/include/: DataReader.h  Evaluation.h  EvaluationMeasures.h  KNN.h  Point.h
lab7/src/: CMakeLists.txt  DataReader.cpp  DataReader.h  Evaluation.cpp  EvaluationMeasures.cpp  EvaluationMeasures.h  KNN.cpp  MinMaxNormalizer.cpp  MinMaxNormalizer.h  Normalizer.h  Point.cpp  Point.h  SumNormalizer.cpp  SumNormalizer.h  ZNormalizer.cpp  ZNormalizer.h  compile_commands.json  main.cpp
lab7/src/include/: DataReader.h  Evaluation.h  EvaluationMeasures.h  KNN.h  MinMaxNormalizer.h  Normalizer.h  Point.h  SumNormalizer.h  ZNormalizer.h
lab8/output/: Expected_output.txt  full_svm  svm_light_format.txt  test_svm
lab8/src/: file_reader.py  main.py  rocchio_classifier.py
lab9/src/: .envrc  adhoc_eval.py  consts.py  dataset.py  file_reader.py  main.py  rocchio_classifier.py  similarity.py  utils.py
lab9_lab10/dataset/: queries.txt
lab9_lab10/output/: expected_output.txt
lab9_lab10/src/: adhoc_eval.py  file_reader.py  main.py
